--- a/bot/upgrade/style.css
+++ b/bot/upgrade/style.css
@@ -63,9 +63,6 @@
   color: transparent;
   font-size: 15px;
   letter-spacing: -0.75px;
-  position: absolute;
-  top: -1px;
-  left: 0;
   max-width: 78px;
   white-space: nowrap;
   overflow: hidden;
